# rkopenmdao

./: .gitignore  .pylintrc  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  README.md  a.txt  error.py  heatequation_inner_problem_animate.py  max_min_timeline.py  par_test.sh  pyproject.toml  setup.py
.github/workflows/: rkopenmdao_matrix_tests.yaml  rkopenmdao_tests.yaml
doc/: user_guide.ipynb
examples/: ParallelDummy.py  cannonball.py  heatequation_analytic.py  heatequation_inner_problem.py  heatequation_inner_problem_check_derivative.py  heatequation_monolithic.py  heatequation_non_openmdao.py  heatequation_openmdao.py  heatequation_openmdao_split.py  heatequation_openmdao_split_functional.py  simple_parallel_distributed_component.py  simple_parallel_group.py  strange_parallel_example.py
examples/convergence_study/: README.md
examples/heatequation/: .pylintrc  analytic_solution.py  analytic_solution_space_discretized.py  boundary.py  domain.py  error.py  fdm_matrix.py  flux_component.py  flux_integral_operator_component.py  heat_equation.py  heat_equation_stage_inner_component.py  heatequation.py  heatequation_animate.py  heatequation_stage_component.py  inhomogeneity.py  split_heat_group.py
examples/plots/: log_error_by_log_time.py  odes.py  plot_adaptive_graphs.py  plot_log_analytical_error_by_log_dt.py  plot_log_error_norm_by_log_dt.py  plot_time_by_dt.py  run_adaptive_problem.py  run_non_adaptive_problem.py  time_by_dt.py
examples/van_der_pol_oscillator/: van_der_pol_oscillator_computation.py  van_der_pol_oscillator_single_run.py  van_der_pol_oscillator_visualisation.py
plots/: log_error_by_log_time.py  time_by_dt.py
plots/data/: error_by_time_data.txt
src/: instationary_from_stationary.py
src/rkopenmdao/: __init__.py  butcher_tableau.py  butcher_tableaux.py  callback.py  components.py  error_controller.py  error_controllers.py  error_controllerx.py  error_estimator.py  error_measurer.py  errors.py  file_writer.py  functional_coefficients.py  integration_config.py  integration_control.py  metadata_extractor.py  om_data_exchange.py  openmdao_time_integration_wrapper.py  postprocessing.py  postprocessing_computation_functors.py  runge_kutta_integrator copy.py  runge_kutta_integrator.py  runge_kutta_integrator_pyrevolve_classes.py  runge_kutta_scheme.py  stage_value_component.py  states.py  termination_criterion.py  time_integration_interface.py  time_integration_state.py  time_stage_problem_computation_functors.py
src/runge_kutta_openmdao/: rk_component_stage.py  runge_kutta_integrator.py
test_cases/kaps/: plot_log_error_plots.py  run_adaptive_problem.py  run_non_adaptive_problem.py  run_non_adaptive_wrt_adaptive.py
test_cases/paper/: plot_log_error_plots.py
tests/: conftest.py  distributed_variables_test.py  metadata_extractor_test.py  odes.py  out.out  parallel_group_test.py  revolver_test.py  temp.py  test_adaptive_runge_kutta_scheme.py  test_butcher_tableaux.py  test_callbacks.py  test_checkpointed_time_integration.py  test_component_test.py  test_component_test_adaptive.py  test_components.py  test_error_controller.py  test_error_estimator.py  test_error_measurer.py  test_functional_coefficients.py  test_functional_coefficients_test.py  test_om_ode.py  test_postprocessing_problems.py  test_postprocessing_problems_test.py  test_runge_kutta_discretization.py  test_runge_kutta_scheme.py  test_runge_kutte_discretization.py  test_time.py  write_file_test.py
tests/data/: HowToGenerateNewData  HowToGenerateNewData.py  time_step_0.txt
tests/heatequation/: boundary_test.py  domain_test.py  fdm_matrix_test.py  flux_component_test.py  flux_integral_operator_component_test.py  heat_equation_stage_component_test.py  heatequation_test.py  inhomogenity_test.py  split_heat_group_test.py
tests/runge_kutta/: convergence_test.py  revolver_test.py  runge_kutta_integrator_test_1.py  runge_kutta_integrator_test_2.py  runge_kutta_integrator_test_3.py  runge_kutta_integrator_test_4.py  runge_kutta_integrator_test_5.py  (+12 more)
(+163 files in other folders)
