[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "numpy>=1.15.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rkopenmdao"
dynamic = ["version"]
description = "Runge-Kutta time integration in OpenMDAO"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Deutsches Zentrum fuer Luft- und Raumfahrt e.V. (DLR)", email = "florian.ross@dlr.de"}
]
maintainers = [
    {name = "Florian Roß", email = "florian.ross@dlr.de"},
    {name = "Sebastian Gottfried", email = "sebastian.gottfried@dlr.de"},
    {name = "Imri Shuvi", email = "imri.shuvi@dlr.de"},
]
keywords = [
    "analysis",
    "multi-disciplinary",
    "multidisciplinary",
    "optimization",
    "unsteady",
    "runge-kutta",
    "instationary",
    "mdao",
]
classifiers  = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "h5py",
    "pyrevolve",
    "mpi4py",
    "petsc4py",
    "openmdao",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-mpi",
    "pylint",
]

[project.scripts]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.black]
target_version = ["py310"]
line-length = 88

[tool.pylint]
max-args = 10
max-attributes=12
disable=[
    "no-else-return",
    "no-else-raise",
]
extension-pkg-whitelist= [
    "mpi4py"
]
good-names=[
    "ax",
    "im",
    "x",
    "y",
    "i",
    "j",
    "f",
    "g",
    "t",
]
max-line-length=88
min-similarity-lines = 10

[tool.setuptools_scm]